refactor: refactor authentication classes