@@ -10,9 +10,7 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.List;
+import java.util.Optional;
 import java.util.Set;
 
 @Service
@@ -22,30 +20,28 @@ public class LoginUtilityService {
     private final UserRepository userRepository;
 
     public AuthenticatedUser findMatch(String username) {
-        List<Users> users = userRepository.findByUsername(username);
-
-        if (users == null || users.size() == 0) {
-            throw new UsernameNotFoundException(
-                    "Usuário não encontrado. {username}: " + username
-            );
-        }
-
-        Users user = users.get(0);
+        Users user = userRepository.findByUsername(username)
+                .orElseThrow(() -> new UsernameNotFoundException(
+                        "Usuário não encontrado. {username}: " + username
+                ));
 
         GrantedAuthority authority = () -> user.getRole().name();
 
-        Set<GrantedAuthority> authorities = new HashSet<GrantedAuthority>(Arrays.asList(authority));
+        Set<GrantedAuthority> authorities = Set.of(authority);
 
         return new AuthenticatedUser(user, authorities);
     }
 
     public Users getLoggedInUser() {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-
-        if (authentication == null || authentication.getPrincipal() == null) {
-            return null;
-        }
-
-        return ((AuthenticatedUser) authentication.getPrincipal()).getUser();
+        return Optional.ofNullable(
+                        SecurityContextHolder.getContext().getAuthentication()
+                )
+                .map(Authentication::getPrincipal)
+                .filter(AuthenticatedUser.class::isInstance)
+                .map(AuthenticatedUser.class::cast)
+                .map(AuthenticatedUser::getUser)
+                .orElseThrow(
+                        () -> new IllegalStateException("Usuário não está autenticado.")
+                );
     }
 }
